--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,32 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  
+  <ion-menu side="end" contentId="main">
+    <ion-header>
+      <ion-toolbar color="danger">
+        <ion-title>End Menu</ion-title>
+        <ion-button (click)="closeMenu()" fill="outline" slot="end">
+          <ion-icon name="close"></ion-icon>
+        </ion-button>
+      </ion-toolbar>
+    </ion-header>
+    <ion-content>
+      <ion-list>
+
+        <ion-item (click)="openMenu()" [routerLink]="['pages/dashboard']">Menu Item</ion-item>
+        <ion-item (click)="closeMenu()" [routerLink]="['/menu']">Menu Item</ion-item>
+        <ion-item (click)="openMenu()" [routerLink]="['/new-meal']">Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+        <ion-item>Menu Item</ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
+
+  <ion-fab id="main" vertical="top" horizontal="end" slot="fixed">
+    <ion-fab-button (click)="openMenu()">
+      <ion-icon name="menu-outline"></ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  
 </ion-app>
