--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,19 +11,19 @@
     </ion-header>
     <ion-content>
       <ion-list>
-
-        <ion-item (click)="openMenu()" [routerLink]="['pages/dashboard']">Menu Item</ion-item>
-        <ion-item (click)="closeMenu()" [routerLink]="['/menu']">Menu Item</ion-item>
-        <ion-item (click)="openMenu()" [routerLink]="['/new-meal']">Menu Item</ion-item>
+        <ion-item (click)="openMenu()" [routerLink]="['pages/dashboard']">pages</ion-item>
+        <ion-item (click)="closeMenu()" [routerLink]="['/menu']">close menu</ion-item>
+        <ion-item (click)="openMenu()" [routerLink]="['/new-meal']">new meal</ion-item>
+        
         <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
+        <ion-item (click)="logOut()">Log out</ion-item>
       </ion-list>
     </ion-content>
   </ion-menu>
 
   <ion-router-outlet id="main"></ion-router-outlet>
 
-  <ion-fab id="main" vertical="top" horizontal="end" slot="fixed">
+  <ion-fab id="main" vertical="top" horizontal="end" slot="fixed" [hidden]="!loggedIn">
     <ion-fab-button (click)="openMenu()">
       <ion-icon name="menu-outline"></ion-icon>
     </ion-fab-button>
