--- a/src/app/pages/web/menu/menu.page.html
+++ b/src/app/pages/web/menu/menu.page.html
@@ -6,4 +6,32 @@
 
 <ion-content>
 
+  <app-days-navbar></app-days-navbar>
+
+  <h1>ORDERS OVERVIEW</h1>
+  <ion-list>
+    <ion-item>
+      <ion-label color="tertiary" position="floating">Search</ion-label>
+      <ion-icon name="search" color="tertiary" slot="start"></ion-icon>
+      <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="tertiary" inputmode="text" placeholder="Seach meal" required="true"></ion-input>
+      <ion-icon name="close" color="tertiary" slot="end"></ion-icon>
+    </ion-item>
+  </ion-list>
+
+  <section>
+    <article class="column">
+      <h2>Non active meals</h2>
+      <p>Click on the meal card to add it to your day menu</p>
+      <app-meal></app-meal>
+      <br>
+      <ion-button (click)="addNewMeal()" id="buttonNewMeal">ADD NEW MEAL</ion-button>
+    </article>
+  
+    <article class="column">
+      <h2>Current meals</h2>
+      <p>currently available meals on your daily menu</p>
+      <app-meal></app-meal>
+    </article>
+  </section>
+
 </ion-content>
