--- a/src/app/components/meal/meal.component.html
+++ b/src/app/components/meal/meal.component.html
@@ -1,12 +1,12 @@
 <ion-content>
 
-  <div class="mealCard">
+  <ion-item class="mealCard">
 
     <ion-icon name="pizza-outline" id="mealImage"></ion-icon>
 
     <h1>Ime jela</h1>
     <p>Ovo je opis jela</p>
     <p>Količina</p>
-  </div>
+  </ion-item>
 
 </ion-content>
