--- a/src/app/pages/web/dashboard/dashboard.page.html
+++ b/src/app/pages/web/dashboard/dashboard.page.html
@@ -9,18 +9,8 @@
 
   <app-days-navbar></app-days-navbar>
 
- <!-- <ul>
-    <li><ion-img src="assets\images\LOGO2-01 1.png" id="appLogo"></ion-img></li>
-    <li>MON</li>
-    <li>TUE</li>
-    <li>WED</li>
-    <li>THU</li>
-    <li>FRI</li>
-    <li>SAT</li>
-    <li>SUN</li>
-  </ul> -->
-
   <h1>ORDERS OVERVIEW</h1>
+  <!-- ion-searchbar -->
   <ion-list>
     <ion-item>
       <ion-label color="tertiary" position="floating">Search</ion-label>
@@ -30,6 +20,7 @@
     </ion-item>
   </ion-list>
 
+  <!-- ion-grid -->
   <section>
     <article class="column">
       <h2>Spin</h2>
