--- a/src/app/components/days-navbar/days-navbar.component.html
+++ b/src/app/components/days-navbar/days-navbar.component.html
@@ -1,6 +1,6 @@
 <!-- ion-list -->
 <ul>
-  <li><ion-img src="assets\images\LOGO2-01 1.png" id="appLogo"></ion-img></li>
+  <li><ion-img src="assets\images\logobijeli-01 1.png" id="appLogo"></ion-img></li>
   <li>MON</li>
   <li>TUE</li>
   <li>WED</li>
