--- a/src/app/components/meal/meal.component.html
+++ b/src/app/components/meal/meal.component.html
@@ -2,11 +2,11 @@
 
   <ion-item class="mealCard">
 
-    <ion-icon name="pizza-outline" id="mealImage"></ion-icon>
+    <ion-img src="assets/images/Ellipse 1.png" id="appLogo"></ion-img>
 
-    <h1>Ime jela</h1>
-    <p>Ovo je opis jela</p>
-    <p>Količina</p>
+    <h1>{{order.jelo}}</h1>
+    <p>{{opisJela}}</p>
+    <p>Količina: {{kolicina}}</p>
   </ion-item>
 
 </ion-content>
