--- a/src/app/pages/web/dashboard/dashboard.page.scss
+++ b/src/app/pages/web/dashboard/dashboard.page.scss
@@ -1,4 +1,4 @@
-ul {
+/* ul {
     float: left;
     background-color: #09B44D;
     width: 80px;
@@ -32,4 +32,4 @@ article {
 
     text-align: center;
     align-items: center;    
-}
+} */
