--- a/src/app/pages/web/menu/menu.page.html
+++ b/src/app/pages/web/menu/menu.page.html
@@ -8,7 +8,7 @@
 
   <app-days-navbar></app-days-navbar>
 
-  <h1>ORDERS OVERVIEW</h1>
+  <h1>DAY MEALS</h1>
   <ion-list>
     <ion-item>
       <ion-label color="tertiary" position="floating">Search</ion-label>
@@ -17,6 +17,14 @@
       <ion-icon name="close" color="tertiary" slot="end"></ion-icon>
     </ion-item>
   </ion-list>
+
+  <!-- <ion-grid></ion-grid> -->
+  <ion-grid>
+    <ion-row>
+      <ion-col></ion-col>
+      <ion-col></ion-col>
+    </ion-row>
+  </ion-grid>
 
   <section>
     <article class="column">
