--- a/src/app/components/meal/meal.component.html
+++ b/src/app/components/meal/meal.component.html
@@ -1,12 +1,6 @@
-<ion-content>
-
-  <ion-item class="mealCard">
-
-    <ion-img src="assets/images/Ellipse 1.png" id="appLogo"></ion-img>
-
-    <h1>{{order.jelo}}</h1>
-    <p>{{opisJela}}</p>
-    <p>Količina: {{kolicina}}</p>
-  </ion-item>
-
-</ion-content>
+<ion-card class="mealCard">
+  <ion-img src="assets/images/Ellipse 1.png" id="mealImage"></ion-img>
+  <h1>{{mealName}}</h1>
+  <p>{{Salad}}, {{Bread}}, {{Soup}}</p>
+  <p>Količina: {{kolicina}}</p>  
+</ion-card>
