--- a/src/app/components/meal/meal.component.scss
+++ b/src/app/components/meal/meal.component.scss
@@ -1,16 +1,20 @@
 .mealCard {
-    background-color: lightgray;
-    margin: 15px;
-    padding: 15px;
+    //background-color: #92949C;
+    margin: 0;
+    padding: 0px;
+    border: 1px grey solid;
+    border-radius: 15px;
+    margin-bottom: 20px;
 }
 
 #mealImage {
     float: left;
-    width: 40px;
-    height: 40px;
-}
-
-#appLogo {
+    margin: 30px;
+    margin-right: 15px;
     width: 100px;
     height: 100px;
+}
+
+.mealCard h1{
+    color: green;
 }
