--- a/src/app/pages/web/dashboard/dashboard.page.html
+++ b/src/app/pages/web/dashboard/dashboard.page.html
@@ -1,103 +1,53 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>dashboard</ion-title>
-  </ion-toolbar>
-
+  <!-- <ion-toolbar>
+   <ion-title>dashboard</ion-title>
+  </ion-toolbar> -->
 </ion-header>
 
 <ion-content> 
 
-  <app-days-navbar></app-days-navbar>
+  <!-- <app-days-navbar></app-days-navbar> -->
 
-  <h1>ORDERS OVERVIEW</h1>
+  <!-- <h1>ORDERS OVERVIEW</h1> -->
   <!-- ion-searchbar -->
-  <ion-list>
+  <!-- <ion-list>
     <ion-item>
       <ion-label color="tertiary" position="floating">Search</ion-label>
       <ion-icon name="search" color="tertiary" slot="start"></ion-icon>
       <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="tertiary" inputmode="text" placeholder="Seach meal" required="true"></ion-input>
       <ion-icon name="close" color="tertiary" slot="end"></ion-icon>
     </ion-item>
-  </ion-list>
-
-  <!-- ion-grid -->
-  <!-- <ion-grid>
-    <ion-row>
-      <ion-col>
-        <h2>Spin</h2>
-        <p>Županijska 15</p>
-        <app-meal></app-meal>
-        <br>
-        <ion-label>Total orders</ion-label>
-      </ion-col>
-      <ion-col>
-        <h2>Company Name</h2>
-        <p>Company Adress</p>
-        <app-meal *ngFor="let order of orders"></app-meal>
-        <br>
-        <ion-label>Total orders</ion-label>
-      </ion-col>
-      <ion-col>
-        <h2>Company Name</h2>
-        <p>Company Adress</p>
-        <br>
-        <ion-label>Total orders</ion-label>
-      </ion-col>
-    </ion-row>
-  </ion-grid> -->
-
-
-
+  </ion-list> -->
+  
+  <!-- <app-days-navbar></app-days-navbar> -->
   <div class="days">
     <div class="day">
-      <!-- <img class="logo" src="" alt=""> -->
+      <img class="logo" src="assets/images/logobijeli-01 1.png" alt="">
     </div>
-    <div [ngClass]="{'day': true, 'active-day':day == currentDay}" *ngFor="let day of days" color="primary" (click)="changeDay(day)">
+    <div [ngClass]="{'day': true, 'active-day': day == currentDay}" *ngFor="let day of days" color="primary" (click)="changeDay(day)">
       <span><h2>{{daysNames[day-1]}}</h2></span>
     </div>
   </div>
 
-  <div class="menu">
-    <ion-grid style="margin: 0px 50px 50px;">
-      <ion-row>
-        <ion-col style="text-align: center;">
-          <h1>ORDERS OVERVIEW</h1>
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col size-xl="3" size-lg="6" size-sm="12" *ngFor="let order of getOrderForDay()">
-          <span>
-            <app-meal [order]="order"></app-meal>
-          </span>
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </div>
+  <h1 id="heading">ORDERS OVERVIEW</h1>
+  <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating"></ion-searchbar>
 
-  <!-- <section>
-    <article class="column">
+  <section>
+    <article>
       <h2>Spin</h2>
       <p>Županijska 15</p>
-      <app-meal></app-meal>
-      <br>
-      <ion-label>Total orders</ion-label>
+        <span *ngFor="let order of getOrdersForDay(); "><app-meal [order]="order" (changed)="pizzasChanged($event)"></app-meal></span>    
     </article>
-  
-    <article class="column">
+    <article>
       <h2>Company Name</h2>
       <p>Company Adress</p>
-      <app-meal></app-meal>
-      <br>
-      <ion-label>Total orders</ion-label>
+      <span *ngFor="let order of getOrdersForDay()"><app-meal [order]="order"></app-meal></span>
     </article>
-    
-    <article class="column">
+    <article>
       <h2>Company Name</h2>
       <p>Company Adress</p>
-      <br>
-      <ion-label>Total orders</ion-label>
+      <!-- <span><app-meal></app-meal></span> -->
     </article>
-  </section> -->
-
+  </section>
 
 </ion-content>
