--- a/src/app/pages/web/dashboard/dashboard.page.scss
+++ b/src/app/pages/web/dashboard/dashboard.page.scss
@@ -1,35 +1,52 @@
-/* ul {
-    float: left;
-    background-color: #09B44D;
-    width: 80px;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    margin-right: 20px;
+#heading {
+    float: left; 
+    margin-left: 40%;
 }
 
-ul li {
-    border: 1px solid black;
-    height: 12.5%;
+#searchbar {
+    float: right; 
+    width: 30%;
+}
+
+.gridHeader {
     text-align: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-}
-
-ul :hover{
-    background-color: #9ef01a;
 }
 
 section {
     display: flex;
+    clear: both;
+    margin-left: 7%;
 }
 
 article {
     flex: 1;
-    background-color: azure;
     margin: 20px;
-
     text-align: center;
     align-items: center;    
-} */
+}
+
+.days {
+    float: left;
+    width: 7%;
+    height: 100%;
+    background-color: #1CBA5B;
+    position: fixed;
+}
+
+// meal
+.day {
+    width: 100%;
+    height: (100%/6);
+    padding: 20px;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white; 
+    font-weight: bolder;
+    cursor: pointer;
+}
+.active-day {
+    color:  #1CBA5B;
+    background-color: white;
+}
