--- a/src/app/pages/web/new-meal/new-meal.page.scss
+++ b/src/app/pages/web/new-meal/new-meal.page.scss
@@ -1,7 +1,27 @@
+.days {
+    float: left;
+    width: 7%;
+    height: 100%;
+    background-color: #1CBA5B;
+    position: fixed;
+}
+.day {
+    width: 100%;
+    height: (100%/6);
+    padding: 20px;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white; 
+    font-weight: bolder;
+    cursor: pointer;
+}
+
 .center {
     padding-left: 40px;
     width: 30%;
-    margin-left: 20%;  
+    margin-left: 7%;  
 }
 
 .userInput {
@@ -10,23 +30,4 @@
 
 .separate {
     margin: 4px;
-}
-
-#sideBar {
-    float: left;
-    background-color: #09B44D;
-    width: 80px;
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    margin-right: 20px;
-}
-
-#appLogo {
-    border: 1px solid black;
-    height: 12.5%;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
 }
