--- a/src/app/pages/web/dashboard/dashboard.page.html
+++ b/src/app/pages/web/dashboard/dashboard.page.html
@@ -6,7 +6,7 @@
 
 <ion-content> 
 
-  <!-- <app-days-navbar></app-days-navbar> -->
+  <app-days-navbar (changed)="navbarClickChangeDay($event)"></app-days-navbar>
 
   <!-- <h1>ORDERS OVERVIEW</h1> -->
   <!-- ion-searchbar -->
@@ -18,16 +18,6 @@
       <ion-icon name="close" color="tertiary" slot="end"></ion-icon>
     </ion-item>
   </ion-list> -->
-  
-  <!-- <app-days-navbar></app-days-navbar> -->
-  <div class="days">
-    <div class="day">
-      <img class="logo" src="assets/images/logobijeli-01 1.png" alt="">
-    </div>
-    <div [ngClass]="{'day': true, 'active-day': day == currentDay}" *ngFor="let day of days" color="primary" (click)="changeDay(day)">
-      <span><h2>{{daysNames[day-1]}}</h2></span>
-    </div>
-  </div>
 
   <h1 id="heading">ORDERS OVERVIEW</h1>
   <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating"></ion-searchbar>
@@ -36,12 +26,12 @@
     <article>
       <h2>Spin</h2>
       <p>Županijska 15</p>
-        <span *ngFor="let order of getOrdersForDay(); "><app-meal [order]="order" (changed)="pizzasChanged($event)"></app-meal></span>    
+        <!-- <span *ngFor="let order of getOrdersForDay(); "><app-meal [order]="order"></app-meal></span> -->    
     </article>
     <article>
       <h2>Company Name</h2>
       <p>Company Adress</p>
-      <span *ngFor="let order of getOrdersForDay()"><app-meal [order]="order"></app-meal></span>
+      <!-- <span *ngFor="let order of getOrdersForDay()"><app-meal [order]="order"></app-meal></span> -->
     </article>
     <article>
       <h2>Company Name</h2>
