--- a/src/app/pages/web/menu/menu.page.scss
+++ b/src/app/pages/web/menu/menu.page.scss
@@ -25,32 +25,12 @@ article {
     align-items: center;    
 }
 
-// days-navbar
-.days {
-    float: left;
-    width: 7%;
-    height: 100%;
-    background-color: #1CBA5B;
-    position: fixed;
-}
-.day {
-    width: 100%;
-    height: (100%/6);
-    padding: 20px;
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white; 
-    font-weight: bolder;
-    cursor: pointer;
-}
-.active-day {
-    color:  #1CBA5B;
-    background-color: white;
+#cardDish_allDishesOfRestaurant :hover {
+    --ion-background-color: #92fa9b !important;
+    cursor: move;
 }
 
-#cardMeal :hover {
-    --ion-background-color: #d8dfe6 !important;
+#cardDish_onTheMenu :hover {
+    --ion-background-color: #f8aaaa !important;
     cursor: pointer;
 }
