--- a/src/app/pages/web/dashboard/dashboard.page.html
+++ b/src/app/pages/web/dashboard/dashboard.page.html
@@ -1,32 +1,16 @@
-<ion-header>
-  <!-- <ion-toolbar>
-   <ion-title>dashboard</ion-title>
-  </ion-toolbar> -->
-</ion-header>
-
-<ion-content> 
+<ion-content>
 
   <app-days-navbar (changed)="navbarClickChangeDay($event)"></app-days-navbar>
 
-  <!-- <h1>ORDERS OVERVIEW</h1> -->
-  <!-- ion-searchbar -->
-  <!-- <ion-list>
-    <ion-item>
-      <ion-label color="tertiary" position="floating">Search</ion-label>
-      <ion-icon name="search" color="tertiary" slot="start"></ion-icon>
-      <ion-input autocorrect="on" autofocus="on" clearInput="true" clearOnEdit="true" color="tertiary" inputmode="text" placeholder="Seach meal" required="true"></ion-input>
-      <ion-icon name="close" color="tertiary" slot="end"></ion-icon>
-    </ion-item>
-  </ion-list> -->
-
   <h1 id="heading">ORDERS OVERVIEW</h1>
-  <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating"></ion-searchbar>
+  <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating">
+  </ion-searchbar>
 
   <section>
     <article>
       <h2>Spin</h2>
       <p>Županijska 15</p>
-        <!-- <span *ngFor="let order of getOrdersForDay(); "><app-meal [order]="order"></app-meal></span> -->    
+      <span *ngFor="let order of orders; "><app-meal [order]="order"></app-meal></span>
     </article>
     <article>
       <h2>Company Name</h2>
