--- a/src/app/pages/web/menu/menu.page.html
+++ b/src/app/pages/web/menu/menu.page.html
@@ -21,7 +21,7 @@
     </article>
     <article>
       <h2>Current meals</h2>
-      <p>currently available meals on your daily menu</p>
+      <p>Currently available meals on your daily menu</p>
       <ion-content class="mealsBlock">
         <span id="cardDish_onTheMenu">
           <app-meal *ngFor="let order of menuForWeekAndCompany_currentDayMenu; index as i" [menuForWeek]="order"
