--- a/src/app/pages/mobile/tabs/tabs.page.html
+++ b/src/app/pages/mobile/tabs/tabs.page.html
@@ -1,19 +1,18 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="dashboard">
-      <ion-icon name="calendar"></ion-icon>
-      <ion-label>Schedule</ion-label>
-      <ion-badge>6</ion-badge>
+      <ion-icon name="home"></ion-icon>
+      <ion-label>Dashboard</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="cart">
-      <ion-icon name="person-circle"></ion-icon>
-      <ion-label>Speakers</ion-label>
+      <ion-icon name="cart"></ion-icon>
+      <ion-label>Cart</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
-      <ion-icon name="map"></ion-icon>
-      <ion-label>Map</ion-label>
+      <ion-icon name="person-circle"></ion-icon>
+      <ion-label>Profile</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
 </ion-tabs>
