--- a/src/app/pages/web/menu/menu.page.html
+++ b/src/app/pages/web/menu/menu.page.html
@@ -14,7 +14,7 @@
       <ion-content class="mealsBlock">
         <span id="cardDish_allDishesOfRestaurant">
           <app-meal *ngFor="let order of allDishesOfRestaurant; index as i" [mealsForWeek]="order"
-            (click)="mealCardClicked_AddDishToMenu(i)"></app-meal> <!--   -->
+            (click)="mealCardClicked_AddDishToMenu(i)"></app-meal>
         </span>
       </ion-content>
       <ion-button (click)="addNewMeal()" id="buttonNewMeal">ADD NEW MEAL</ion-button>
