--- a/src/app/pages/mobile/dashboard/dashboard/dashboard.page.html
+++ b/src/app/pages/mobile/dashboard/dashboard/dashboard.page.html
@@ -1,6 +1,12 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Dashboard</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
 
-  <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating" ionInput="search($event)">
+  <ion-searchbar showCancelButton="focus" cancelButtonText="Custom Cancel" id="searchbar" position="floating" (ionChange)=search($event)>
   </ion-searchbar>
 
   <ion-list>
