--- a/src/app/pages/mobile/dashboard/dashboard/dashboard.page.html
+++ b/src/app/pages/mobile/dashboard/dashboard/dashboard.page.html
@@ -12,7 +12,7 @@
   <ion-list>
     <ion-card class="ion-text-center ion-padding" [routerLink]="['/mobile/restaurant']"
       [queryParams]='{id: restaurant.companyId}' *ngFor="let restaurant of filteredRestauraunts"
-      [ngStyle]="{'background-image': restaurant.image}">
+      [ngStyle]="{'background-image': restaurant.image}" class="image--size">
       <ion-card-header>
         <ion-card-title class="ion-margin-top">
           <ion-text>{{restaurant.name}}</ion-text>
