--- a/src/app/pages/mobile/tabs/tabs.page.html
+++ b/src/app/pages/mobile/tabs/tabs.page.html
@@ -8,7 +8,7 @@
     <ion-tab-button tab="cart">
       <ion-icon name="cart"></ion-icon>
       <ion-label>Cart</ion-label>
-      <ion-badge>5</ion-badge>
+      <ion-badge>{{itemsInCart}}</ion-badge>
     </ion-tab-button>
 
     <ion-tab-button tab="profile">
