--- a/src/app/pages/mobile/cart/cart/cart.page.html
+++ b/src/app/pages/mobile/cart/cart/cart.page.html
@@ -5,5 +5,13 @@
 </ion-header>
 
 <ion-content>
+  <ion-list>
+    <ion-card>
+      <span>
+        <app-meal *ngFor="let order of orders; index as i" [menuDish]="order"></app-meal> <!-- dodati ikonicu koja pokazuje koji dan je naruceno jelo -->
+      </span>
+    </ion-card>
+  </ion-list>
 
+  <ion-button expand='block' *ngIf="orders.length" (click)="finishOrder()">Finish order</ion-button>
 </ion-content>
